--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link {% if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="#">Acheter</a>
+                        <a class="nav-link {% if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="{{ path('property_index') }}">Acheter</a>
                     </li>
                 </ul>
                 {% if app.user %}
