--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -21,7 +21,7 @@
                     {% endif %}
                     <div class="card-body">
                         <h5 class="card-title">
-                            <a href="{{ path('property_show', {slug: property.slug, id: property.id}) }}">{{ property.title }}</a>
+                            <a href="#">{{ property.title }}</a>
                         </h5>
                         <p class="card-text">{{ property.city }} ({{ property.postalCode }})</p>
                         <div class="text-primary" style="font-weight: bold;font-size: 2rem">{{ property.formattedPrice }} €</div>
