--- a/templates/property/_property.html.twig
+++ b/templates/property/_property.html.twig
@@ -1,7 +1,7 @@
 <div class="card mb-4">
     <div class="card-body">
         <h5 class="card-title">
-            <a href="#">
+            <a href="{{ path('property_show', {slug: property.slug, id: property.id}) }}">
                 {{ property.title }}
             </a>
         </h5>
