associer une image à un bien

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -15,9 +15,9 @@
             <div class="col-3">
                 <div class="card">
                     {% if property.filename %}
-                        <img src="/images/properties/{{ property.filename }}" alt="card-img-top" style="width:100%; height:auto">
+                        <img src="/images/properties/{{ property.filename }}" alt="card-img-top" style="width:100%; height:200px">
                         {% else %}
-                            <img src="/images/properties/maison.jpg" alt="card-img-top" style="width:100%; height:auto">
+                            <img src="/images/properties/maison.jpg" alt="card-img-top" style="width:100%; height:200px">
                     {% endif %}
                     <div class="card-body">
                         <h5 class="card-title">
