--- a/templates/property/_property.html.twig
+++ b/templates/property/_property.html.twig
@@ -1,13 +1,20 @@
 <div class="card mb-4">
-    <div class="card-body">
-        <h5 class="card-title">
-            <a href="{{ path('property_show', {slug: property.slug, id: property.id}) }}">
-                {{ property.title }}
-            </a>
-        </h5>
-        <p class="card-text">{{ property.surface }} m2 - {{ property.city }} ({{ property.postalCode }})</p>
-        <div class="text-primary" style="font-size:2rem, font-weight:bold;">
-            {{ property.formattedPrice }} €
+    <div class="card">
+        {% if property.filename %}
+                        <img src="/images/properties/{{ property.filename }}" alt="card-img-top" style="width:100%; height:200px">
+                        {% else %}
+                            <img src="/images/properties/maison.jpg" alt="card-img-top" style="width:100%; height:200px">
+                    {% endif %}
+        <div class="card-body">
+            <h5 class="card-title">
+                <a href="{{ path('property_show', {slug: property.slug, id: property.id}) }}">
+                    {{ property.title }}
+                </a>
+            </h5>
+            <p class="card-text">{{ property.surface }} m2 - {{ property.city }} ({{ property.postalCode }})</p>
+            <div class="text-primary" style="font-size:2rem, font-weight:bold;">
+                {{ property.formattedPrice }} €
+            </div>
         </div>
     </div>
 </div>
